[MODINVOICE-615]. Update tests with await